--- a/_site.yml
+++ b/_site.yml
@@ -5,10 +5,15 @@ navbar:
   right:
     - text: "About"
       href: about.html
+    - text: "Plotly"
+      href: plotly.html
+    - text: "Dashboard"
+      href: Dashboard.html
     - icon: fa-envelope fa-lg
-      href: mailto:<you@youremail.com>
+      href: mailto:<leomultiverse@gmail.com>
     - icon: fa-github fa-lg
-      href: http://github.com/<YOUR_GH_NAME>/
+      href: http://github.com/<Leooolzh>/
 output:
   html_document:
-    theme: cerulean
+    theme: flatly
+    
